bpk-lib/crates/core/tests/ui/invalid_transition.stderr
error[E0277]: the trait bound `String: StateMarker` is not satisfied
  --> tests/ui/invalid_transition.rs:24:15
   |
24 |     let _bad: Option<Transition<String, Released, InvalidPayload>> = None;
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `StateMarker` is not implemented for `String`
   |
help: the following other types implement trait `StateMarker`
  --> tests/ui/invalid_transition.rs:19:1
   |
19 | batpak::define_state_machine!(lock_state_seal, LockState { Acquired, Released });
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | |
   | `Acquired`
   | `Released`
note: required by a bound in `Transition`
  --> src/typestate/transition.rs
   |
   | pub struct Transition<From: StateMarker, To: StateMarker, P: EventPayload> {
   |                             ^^^^^^^^^^^ required by this bound in `Transition`
   = note: this error originates in the macro `batpak::define_state_machine` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `InvalidPayload: EventPayload` is not satisfied
  --> tests/ui/invalid_transition.rs:24:15
   |
24 |     let _bad: Option<Transition<String, Released, InvalidPayload>> = None;
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `EventPayload` is not implemented for `InvalidPayload`
  --> tests/ui/invalid_transition.rs:21:1
   |
21 | struct InvalidPayload;
   | ^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `Transition`
  --> src/typestate/transition.rs
   |
   | pub struct Transition<From: StateMarker, To: StateMarker, P: EventPayload> {
   |                                                              ^^^^^^^^^^^^ required by this bound in `Transition`

error[E0277]: the trait bound `String: StateMarker` is not satisfied
  --> tests/ui/invalid_transition.rs:24:70
   |
24 |     let _bad: Option<Transition<String, Released, InvalidPayload>> = None;
   |                                                                      ^^^^ the trait `StateMarker` is not implemented for `String`
   |
help: the following other types implement trait `StateMarker`
  --> tests/ui/invalid_transition.rs:19:1
   |
19 | batpak::define_state_machine!(lock_state_seal, LockState { Acquired, Released });
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | |
   | `Acquired`
   | `Released`
note: required by a bound in `Transition`
  --> src/typestate/transition.rs
   |
   | pub struct Transition<From: StateMarker, To: StateMarker, P: EventPayload> {
   |                             ^^^^^^^^^^^ required by this bound in `Transition`
   = note: this error originates in the macro `batpak::define_state_machine` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `InvalidPayload: EventPayload` is not satisfied
  --> tests/ui/invalid_transition.rs:24:70
   |
24 |     let _bad: Option<Transition<String, Released, InvalidPayload>> = None;
   |                                                                      ^^^^ unsatisfied trait bound
   |
help: the trait `EventPayload` is not implemented for `InvalidPayload`
  --> tests/ui/invalid_transition.rs:21:1
   |
21 | struct InvalidPayload;
   | ^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `Transition`
  --> src/typestate/transition.rs
   |
   | pub struct Transition<From: StateMarker, To: StateMarker, P: EventPayload> {
   |                                                              ^^^^^^^^^^^^ required by this bound in `Transition`
